--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
     ],
     "require": {
         "php": ">= 7.2",
-        "shopware/administration": ">=6.2 <6.4",
-        "shopware/core": ">=6.2 <6.4"
+        "shopware/core": ">=6.2 <6.4",
+        "symfony/event-dispatcher": ">=4",
+        "symfony/http-foundation": ">=4",
+        "symfony/http-kernel": ">=4"
     },
     "conflict": {
         "nikic/php-parser": "4.7.0"
