--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "require": {
         "php": ">= 7.2",
+        "shopware/administration": ">=6.2 <6.4",
         "shopware/core": ">=6.2 <6.4",
         "symfony/event-dispatcher": ">=4",
         "symfony/http-foundation": ">=4",
@@ -61,7 +62,10 @@
         "supportLink": {
             "de-DE": "https://www.heptacom.de/kontakt/",
             "en-GB": "https://www.heptacom.de/kontakt/"
-        }
+        },
+        "unused": [
+            "shopware/administration"
+        ]
     },
     "autoload": {
         "psr-4": {
